--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
+
+
 {
-  "name": "bot-battlr",
+  "name": "react-hooks-bot-battlr-code-challenge",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://1738kimutai.github.io/Bot-Battlr",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "gh-pages": "^4.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "web-vitals": "^0.2.4"
+  },
+  "devDependencies": {
+    "json-server": "^0.15.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
+    "start": "PORT=8000 react-scripts start",
+    "build":"react-scripts build",
+    "server": "json-server --watch db.json -p 8002"
   },
   "eslintConfig": {
     "extends": [
